--- a/bin/install
+++ b/bin/install
@@ -8,24 +8,7 @@ plugin_dir=$(dirname "$(dirname "$current_script_path")")
 # shellcheck source=./lib/utils.bash
 source "${plugin_dir}/lib/utils.bash"
 
-install_version() {
-	local install_type=$1
-	local install_version=$2
-	local install_path=$3
-
-	echo "Installing ESP-IDF version '${install_version}' at '${install_path}' using install type '${install_type}'"
-
-	PACKAGE_TAR_PATH="${install_path}/sources.tar.gz"
-	PACKAGE_INSTALL_PATH="${install_path}"
-	DOWNLOAD_URL="https://github.com/espressif/esp-idf/archive/refs/tags/v$install_version.tar.gz"
-
-	curl -L -o "$PACKAGE_TAR_PATH" "$DOWNLOAD_URL" || fail "Could not download $DOWNLOAD_URL"
-
-	tar -xzf "$PACKAGE_TAR_PATH" -C "$PACKAGE_INSTALL_PATH" --strip-components=1 || fail "Could not extract $PACKAGE_TAR_PATH"
-
-	rm "$PACKAGE_TAR_PATH";
-}
-
-install_version "$ASDF_INSTALL_TYPE" "$ASDF_INSTALL_VERSION" "$ASDF_INSTALL_PATH"
+PACKAGE_TAR_PATH="$ASDF_DOWNLOAD_PATH/sources.tar.gz"
+tar -xzf "$PACKAGE_TAR_PATH" -C "$ASDF_INSTALL_PATH" --strip-components=1 || fail "Could not extract $PACKAGE_TAR_PATH"
 cd "$ASDF_INSTALL_PATH"
 ./install.sh
